update ignore ref

--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,5 @@ o/*
 *.exe
 *.manifest
 *.lnk
-easy_install-2.7-script.py
-easy_install-script.py
-ipcluster-script.py
-ipcontroller-script.py
-ipengine-script.py
-iplogger-script.py
-iptest-script.py
-ipython-script.py
-irunner-script.py
-margins-script.py
-pip-2.7-script.py
-pip-script.py
-pycolor-script.py
+*script.py
 runxlrd.py
